--- a/PortfolioStyles.css
+++ b/PortfolioStyles.css
@@ -9,18 +9,25 @@
   src: url(Fonts/tahoma.ttf) format("truetype");
 }
 
-/* Global styles */
+/* global styles */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Tahoma", "Hongmenti", sans-serif;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
 }
 
 body {
   /* temp bg */
   background-color: #f5f5f5;
+  color: black;
   color: #333;
+  font-family: "Tahoma", "Hongmenti", sans-serif;
   overflow-x: hidden;
 }
 .h1,
@@ -28,8 +35,239 @@ h2,
 h3,
 h4 {
   font-family: "Hongmengti", sans-serif;
+  font-size: 2rem;
+}
+
+.h5,
+h6 {
+  font-family: "Tahoma", sans-serif;
+  font-size: 1.5rem;
 }
 
 .p {
   font-family: "Tahoma", sans-serif;
+  font-size: 1.125rem;
 }
+
+/* ===== HEADER ===== */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: black;
+  height: 4.3rem;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.header .logo {
+  margin-left: 1rem;
+}
+
+.header .quote {
+  color: white;
+  text-align: center;
+  flex-grow: 1;
+  font-family: "Hongmengti", sans-serif;
+}
+
+.header .socials {
+  position: relative;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+.header .socials img {
+  width: 2rem;
+  height: 2rem;
+  filter: brightness(0.5);
+  transition: filter 0.3s;
+}
+
+.header .socials img:hover {
+  filter: brightness(1);
+}
+
+.header .socials .socials-dropdown {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: black;
+  padding: 0;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  width: 10rem;
+  overflow: hidden;
+}
+
+.header .socials:hover .socials-dropdown {
+  display: table-column;
+}
+
+.header .socials .socials-dropdown .top-highlight {
+  background-color: #d7f205;
+  width: 100%;
+  height: 0.5rem;
+  margin: 0;
+}
+
+.header .socials .socials-dropdown h6 {
+  color: white;
+  padding-top: 0.75rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  font-size: 0.85rem;
+  font-family: "Tahoma", sans-serif;
+}
+
+.header .socials .socials-dropdown .social-icon {
+  display: flex;
+  align-items: space-between;
+  color: white;
+  justify-content: flex-start;
+  text-decoration: none;
+  margin-bottom: 0.75rem;
+  margin-left: 0.75rem;
+  width: 100%;
+  transition: color 0.5s;
+}
+
+.header .socials .socials-dropdown .social-icon img {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-right: 0.75rem;
+  filter: brightness(0.5);
+  transition: filter 0.3s;
+}
+
+.header .socials .socials-dropdown .social-icon span {
+  color: white;
+  transition: color 0.3s;
+}
+
+.header .socials .socials-dropdown .social-icon:hover img {
+  filter: brightness(1);
+}
+
+.header .socials .socials-dropdown .social-icon:hover {
+  color: #d7f205;
+}
+
+/* ===== LEFT NAVBAR ===== */
+.vertical-nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  background-color: rgb(0, 0, 0);
+  position: fixed;
+  top: 55%;
+  left: 0;
+  transform: translateY(-55%);
+  height: auto;
+  width: 5rem;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  z-index: 1000;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.vertical-nav .nav-link {
+  position: relative;
+}
+
+.vertical-nav .nav-link::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  left: 100%;
+  top: 55%;
+  transform: translateY(-55%);
+  background-color: #000000;
+  color: #f5f5f5;
+  padding: 0.5rem 1rem;
+  font-size: 0.75rem;
+  white-space: nowrap;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 500ms, visibility 500ms;
+  margin-left: 10px;
+  pointer-events: none;
+  z-index: 1001;
+  font-family: "Tahoma", sans-serif;
+  border-left: 3px solid #d7f205;
+}
+
+.vertical-nav .nav-link:hover::after {
+  opacity: 1;
+  visibility: visible;
+}
+
+.vertical-nav .nav-link.active::after {
+  border-left-color: #d7f205;
+}
+
+.vertical-nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+.vertical-nav ul li {
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.vertical-nav ul li a {
+  text-decoration: none;
+  color: white;
+  font-family: "Tahoma", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 25px;
+  transition: background-color 500ms, color 500ms, border-radius 500ms;
+}
+
+.vertical-nav ul li a img {
+  width: 2rem;
+  height: 2rem;
+  filter: brightness(1);
+  transition: filter 500ms;
+}
+
+.vertical-nav ul li a:hover {
+  background-color: #d7f205;
+  color: black;
+  border-radius: 10px;
+}
+
+.vertical-nav ul li a:hover img {
+  filter: brightness(0);
+}
+
+.vertical-nav ul li a.active {
+  background-color: #d7f205;
+  color: black;
+  border-radius: 10px;
+}
+
+.vertical-nav ul li a.active img {
+  filter: brightness(0);
+}
+
+.anchor {
+  display: block;
+  height: 4.3rem;
+  margin-top: -4.3rem;
+  visibility: hidden;
+}
+
+/* ===== MAIN ===== */
