--- a/PortfolioStyles.css
+++ b/PortfolioStyles.css
@@ -1,3 +1,9 @@
+/* root */
+:root {
+  /* shape parameters */
+  --shape-angle: calc(84% - 12vw);
+}
+
 /* fonts */
 @font-face {
   font-family: "Hongmengti";
@@ -455,4 +461,207 @@ h6 {
   background-color: #d7f205;
   clip-path: polygon(calc(12.9% - 12vw) 12px, 100% 12px, 100% 100%, 0 100%);
   z-index: 4;
+}
+
+/* ===== ABOUT ===== */
+
+#about {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  gap: 2rem;
+  overflow-x: hidden;
+}
+
+.about-top-left {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  margin-left: 6.75rem;
+  padding-left: 1rem;
+}
+
+.about-top-right {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  margin-left: 6.75rem;
+  padding-left: 1rem;
+}
+
+.about-vertical-line {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  width: 0.25rem;
+  background-color: #000000;
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
+  border-radius: 5px;
+  align-self: stretch;
+  height: calc(100% - 14rem);
+}
+
+.about-bottom-left {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  position: relative;
+  overflow: visible;
+  padding-right: 2rem;
+}
+
+.about-bottom-right {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  margin-left: 6.75rem;
+  padding-left: 1rem;
+}
+
+.bio-list a {
+  color: #000000;
+}
+
+.bio-list {
+  margin-top: 1rem;
+}
+
+.bio-list dt {
+  font-weight: bold;
+  color: black;
+}
+
+.bio-list dd {
+  margin-left: 1rem;
+  color: #000000;
+}
+
+.ego-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.ego-pie {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pacman-chart {
+  width: 200px;
+  height: 200px;
+  background: conic-gradient(#d7f205 0 80%, #000000 80% 100%);
+  border-radius: 50%;
+  position: relative;
+  font-weight: bold;
+}
+
+.pacman-chart::before {
+  content: "Design";
+  position: absolute;
+  top: 75%;
+  left: 53%;
+  transform: translate(-53%, -75%);
+  color: #000000;
+  font-size: 1.25rem;
+}
+
+.pacman-chart::after {
+  content: "Code";
+  position: absolute;
+  top: 20%;
+  left: 25%;
+  transform: translate(-25%, -20%);
+  color: #ffffff;
+  font-size: 1.25rem;
+}
+
+.abstract-shape-container-left {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 2rem;
+  width: calc(100% - 2rem);
+  height: 380px;
+  overflow: visible;
+  margin-left: -6.75rem;
+}
+
+.abstract-shape-about {
+  width: calc(100% + 15rem);
+  height: 380px;
+  background-color: #262626;
+  clip-path: polygon(0 12px, var(--shape-angle) 12px, 100% 100%, 0 100%);
+  position: absolute;
+  left: 0;
+  z-index: 2;
+}
+
+.profile-photo-about {
+  position: absolute;
+  left: 35%;
+  bottom: 0;
+  width: 80%;
+  height: auto;
+  z-index: 3;
+}
+
+.shape-highlight-about {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: calc(100% + 15rem);
+  height: 2.5rem;
+  background-color: #d7f205;
+  clip-path: polygon(0 12px, calc(117.9% - 12vw) 12px, 100% 100%, 0 100%);
+  z-index: 4;
+}
+
+.about-rant {
+  padding: 0.5rem;
+  overflow-y: auto;
+  background-color: #262626;
+  padding: 1.75rem;
+  z-index: 3;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  border-radius: 3.75rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.about-rant h3 {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  background-color: #d7f205;
+  color: black;
+  text-align: center;
+  padding: 0.5rem;
+  border-radius: 1.5rem;
+  position: relative;
+  z-index: 2;
+}
+
+.about-rant p {
+  margin-bottom: 1.5rem;
+  line-height: 1.5;
+}
+
+.about-rant p:last-child {
+  margin-bottom: 0;
+}
+
+.about-rant::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+.about-rant::-webkit-scrollbar-track {
+  background: #262626;
+}
+
+.about-rant::-webkit-scrollbar-thumb {
+  background-color: #3f3f3f;
+  border-radius: 3px;
 }
