--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,7 @@
 /* root */
 :root {
   /* shape parameters */
-  --shape-angle: calc(84% - 12vw);
+  --shape-angle: calc(75% - 12vw); /* reduced from 84% */
 }
 
 /* fonts */
@@ -53,17 +53,33 @@ h6 {
 }
 
 main {
-  margin-left: 4.5rem;
+  margin: 0 auto;
+  max-width: 1200px;
+  width: 100%;
+  padding: 1rem;
   overflow-x: hidden;
+  position: relative;
 }
 
 /* main media query */
 @media (max-width: 768px) {
   main {
-    margin-left: 4rem;
+    padding: 1rem;
+    width: 100%;
   }
 
   .intro-left {
-    padding: 1rem 1rem 0.5rem;
+    padding: 1rem 0 0.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  main {
+    padding: 1rem;
+    width: 100%;
+  }
+
+  .intro-left {
+    padding: 1rem 0 0.5rem;
   }
 }
