--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,7 @@
 #home {
   display: grid;
   grid-template-columns: minmax(450px, 1fr) 2fr;
-  gap: 2rem;
+  gap: 1rem;
   align-items: center;
   justify-content: center;
   max-width: 1440px;
@@ -143,7 +143,7 @@
 
 .comments-box {
   position: absolute;
-  right: 10%;
+  right: 5%;
   top: 50%;
   transform: translateY(-50%);
   width: 45%;
@@ -157,8 +157,8 @@
 
 .comments-box p {
   margin-bottom: 1rem;
-  line-height: 1.25;
-  font-size: 0.85rem;
+  line-height: 1rem;
+  font-size: 0.8rem;
 }
 
 .comments-box p span {
@@ -175,7 +175,7 @@
   width: 100%;
   height: 2.5rem;
   background-color: #d7f205;
-  clip-path: polygon(calc(25% - 12vw) 12px, 100% 12px, 100% 100%, 0 100%);
+  clip-path: polygon(calc(40% - 12vw) 12px, 100% 12px, 100% 100%, 0 100%);
   z-index: 4;
 }
 
@@ -224,24 +224,23 @@
 
   .comments-box {
     position: relative;
+    left: 5%;
     right: auto;
-    top: auto;
     transform: none;
     width: 55%;
     height: auto;
     margin: 0;
     padding: 1.5rem;
-    color: #000000;
-    background-color: transparent;
+    color: #ffffff;
+    background-color: #262626;
+    border-radius: 12px;
     align-self: center;
   }
 
-  .comments-box::-webkit-scrollbar-track {
-    background: transparent;
-  }
-
-  .comments-box::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.2);
+  .comments-box p {
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+    line-height: 1.25rem;
   }
 
   .shape-highlight {
@@ -285,9 +284,20 @@
 
   .comments-box {
     width: 45%;
-    max-height: 250px;
-    padding: 0.5rem;
-    overflow-y: auto;
+    max-height: none;
+    padding: 1rem;
+    overflow-y: visible;
+  }
+
+  .comments-box p {
+    font-size: 0.85rem;
+    margin-bottom: 1rem;
+    line-height: 1.2;
+  }
+
+  .comments-box p span {
+    font-size: 0.75rem;
+    margin-top: 0.2rem;
   }
 
   .intro-text h4 {
@@ -302,33 +312,47 @@
 @media (max-width: 480px) {
   #home {
     padding: 0;
-    gap: 0.5rem;
+    gap: 0; /* remove the gap between grids */
     width: 100%;
   }
 
   .home-right {
     margin-top: 0;
     min-height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
 
   .abstract-shape-container {
     margin: 0;
     padding: 0;
     flex-direction: column;
-    justify-content: center;
-    gap: 1rem;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0;
+    width: 100%;
   }
 
   .profile-photo {
     width: 80%;
-    margin: 0 auto;
+    position: relative;
+    left: -2%;
+    right: 0;
+    display: block;
+    margin: 0 0 -2rem 0;
   }
 
   .comments-box {
     width: 90%;
     height: auto;
     padding: 1.5rem;
-    margin: 0.5rem auto;
+    margin: 0 auto;
+    position: relative;
+    left: 0;
+    right: 0;
+    transform: none;
   }
 
   .comments-box p {
